# mcp-server-zwave-js-ui

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
src/zwave_js_ui_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: test_client.py  test_server.py
