[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-zwave-js-ui"
version = "0.3.0"
description = "MCP server for Z-Wave device management via the zwave-js-server WebSocket exposed by Z-Wave JS UI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Chris Clonch", email = "cclonch@gmail.com" },
]
keywords = ["zwave", "zwave-js", "mcp", "home-automation", "smart-home"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "mcp>=1.0",
    "zwave-js-server-python>=0.72",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "python-dotenv>=1.0",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/cacack/mcp-server-zwave-js-ui"
Repository = "https://github.com/cacack/mcp-server-zwave-js-ui"
Issues = "https://github.com/cacack/mcp-server-zwave-js-ui/issues"

[project.scripts]
mcp-server-zwave-js-ui = "zwave_js_ui_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zwave_js_ui_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]
